# pleview

./: .gitignore  CMakeLists.txt  Copyright.txt  README.md
img/: pleview.rc  resources.qrc
install/: NSIS.PleviewOptions.ini.in  NSIS.template.in
muparser/: CMakeLists.txt
muparser/include/: muParser.h  muParserBase.h  muParserDef.h  muParserToken.h
muparser/src/: muParser.cpp  muParserBase.cpp  muParserTokenReader.cpp
qwt-tk/: CMakeLists.txt
qwt-tk/src/: qwt_legend.cpp  qwt_plot_abstract_barchart.cpp  qwt_plot_glcanvas.h  qwt_transform.h
qwt-tk/src-tk/: ColorMap.cpp  ColorMap.h  ColorMapSlider.cpp  ColorMapSlider.h  MapItem.cpp  MapItem.h  advancedplot.cpp  advancedplot.h  colorbutton.cpp  colorbutton.h  colormap.cpp  colormap.h  colormapslider.cpp  colormapslider.h  data.cpp  data.h  data2d.cpp  data2d.h  data3d.cpp  data3d.h  offlinerenderitem.cpp  offlinerenderitem.h  xml.cpp  xml.h
qwt4pleview/: CMakeLists.txt
qwt4pleview/examples/: test_colormapslider.cpp  test_saving_to_xml.cpp
qwt4pleview/qwt/src/: qwt_abstract_slider.cpp  qwt_clipper.cpp  qwt_compass_rose.cpp  qwt_counter.cpp  qwt_null_paintdevice.cpp  qwt_painter.cpp  qwt_plot_glcanvas.cpp  qwt_plot_renderer.cpp  qwt_scale_engine.cpp
qwt4pleview/src/: MapItem.cpp  MapItem.h  advancedplot.h  colormap.cpp  colormap.h  colormapslider.cpp  colormapslider.h  data.cpp  data.h  data1d.cpp  data1d.h  data2d.cpp  data2d.h  doublemarker.cpp  qwt_global.h  qwt_graphic.cpp  qwt_painter.cpp  qwt_plot_textlabel.cpp  qwt_transform.cpp  src.pri  xml.cpp  xml.h
qwt4pleview/src-tk/: MapItem.h  advancedplot.cpp  colormapslider.cpp  data.cpp  data1d.h  data2d.h  doublemarker.h  main.cpp  offlinerenderitem.h  timecounter.cpp  timecounter.h
qwt4pleview/textengines/: textengines.pri
src/: DLLDefines.h  axis.cpp  axis.h  axistransformation.cpp  axistransformation.h  configdialog.cpp  configdialog.h  dataexport.cpp  dataexport.h  datafilters.cpp  datafilters.h  datafiltersgui.cpp  datafiltersgui.h  dataimport.cpp  dataimport.h  dataimport_hamamatsu.cpp  dataimport_hamamatsu.h  dataimport_pumpprobe.cpp  dataimport_pumpprobe.h  defs.h  log.cpp  log.h  main.cpp  mainwindow.cpp  mainwindow.h  mapwithmarker.cpp  mapwithmarker.h  model.cpp  model.h  parserwidget.cpp  parserwidget.h  pleview.cpp  pleview.h  plotaddons.cpp  plotaddons.h  plotaddonsgui.cpp  plotaddonsgui.h  plotrangesmanager.cpp  plotrangesmanager.h  plotwithmarker.cpp  (+9 more)
src-tk/: colormap.cpp  colormapslider.h
src/plugins/: CMakeLists.txt  curvegroup.cpp  curvegroup.h  parserxml.cpp  parserxml.h  plotcurveext.cpp  plotcurveext.h
src/plugins/comment/: CMakeLists.txt  comment.cpp  comment.h
src/plugins/compareother/: CMakeLists.txt  compareother.cpp  compareother.h  doublemapitem.cpp  doublemapitem.h
src/plugins/differentiate/: CMakeLists.txt  differentialmodel.cpp  differentialmodel.h  differentiate.cpp  differentiate.h
src/plugins/foldfilter/: CMakeLists.txt  foldfilter.cpp  foldfilter.h
src/plugins/mapper/: CMakeLists.txt  mapperplugin.cpp  mapperplugin.h
src/plugins/peakfinder/: CMakeLists.txt  peakfinder.cpp  peakfinder.h
src/plugins/pointpicker/: CMakeLists.txt  pointpicker.cpp  pointpicker.h
src/plugins/qdplugin/: CMakeLists.txt  qdplugin.cpp  qdplugin.h
src/plugins/simulator/: CMakeLists.txt  simulatorplugin.cpp  simulatorplugin.h
src/plugins/spikeremove/: CMakeLists.txt  spikeremove.cpp  spikeremove.h
src/plugins/tests/: linleastsq_test.cpp  linleastsq_test.pro
src/plugins/transformer/: CMakeLists.txt  spectrumtransformer.cpp  spectrumtransformer.h
src/plugins/transpose/: CMakeLists.txt  transposefilter.cpp  transposefilter.h
src/plugins/variabledef/: CMakeLists.txt  rangevariablefilter.cpp  rangevariablefilter.h
src/plugins/xsectionfitter/: CMakeLists.txt  lmmin.h  nonlinleastsq.cpp  nonlinleastsq.h  sectionedcurve.cpp  sectionedcurve.h  signalmerger.cpp  signalmerger.h  variablewidget.cpp  variablewidget.h  xsectionfitter.cpp  xsectionfitter.h
src/plugins/zeemanplugin/: CMakeLists.txt  linleastsq.cpp  linleastsq.h  zeemanplugin.cpp  zeemanplugin.h
voro/: CMakeLists.txt  c_loops_2d.hh  cell_2d.cc  cell_2d.hh  common.cc  common.hh  container_2d.cc  container_2d.hh  ctr_boundary_2d.cc  ctr_boundary_2d.hh  examples.cpp  v_base_2d.cc  v_base_2d.hh  v_compute_2d.cc  v_compute_2d.hh  voronoi_plot_item.cpp  voronoi_plot_item.h  vorowrapper.cpp  vorowrapper.h
zlib/: CMakeLists.txt
